Установил параметры запуска бэка и фронта

--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@bioxakep/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:front": "nx dev frontend",
+    "start:back": "nx serve backend",
+    "build:front": "nx start frontend",
+    "build:back": "nx build backend"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
